fixed border images to work on safari

--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@ body {
     background-image: url(); }
   .card__heading {
     text-align: center;
-    border-bottom: 3px solid transparent;
+    border-bottom: 3px solid;
     border-image: linear-gradient(to right, transparent 1%, lightgray 10%, gray, lightgray 90%, transparent 99%);
     border-image-slice: 1;
     margin-bottom: 1rem;
@@ -349,7 +349,7 @@ body {
   position: fixed;
   top: 6.5rem;
   right: 6.5rem;
-  background-image: radial-gradient(#bebaba, #000);
+  background-color: #bebaba;
   z-index: 1000;
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
   @media only screen and (max-width: 56.25em) {
@@ -454,7 +454,7 @@ body {
   padding: 7.5rem 0 4rem 0; }
   .section-about__container {
     display: flex;
-    border-top: 3px solid transparent;
+    border-top: 3px solid;
     border-image: linear-gradient(to right, transparent 10%, lightgray 30%, gray, lightgray 70%, transparent 90%);
     border-image-slice: 1;
     margin-bottom: 10rem; }
@@ -466,7 +466,7 @@ body {
       display: flex;
       justify-content: flex-start;
       width: 50%;
-      border-left: 3px solid transparent;
+      border-left: 3px solid;
       border-image: linear-gradient(to bottom, gray, lightgray 70%, transparent 98%);
       border-image-slice: 1; }
 
