--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -22,7 +22,7 @@
 
     &__heading {
         text-align: center;
-        border-bottom: 3px solid transparent;
+        border-bottom: 3px solid;
         border-image: linear-gradient(to right, transparent 1%, lightgray 10%, gray, lightgray 90%, transparent 99%);
         border-image-slice: 1;
         margin-bottom: 1rem;
@@ -55,7 +55,7 @@
         font-size: 2rem;
 
         &:not(:last-child) {
-            // border-bottom: 1px solid transparent;
+            // border-bottom: 1px solid;
             // border-image: linear-gradient(to right, transparent 10%, lightgray, transparent 90%);
             // border-image-slice: 1;
         }
